// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schedule Component should render 1`] = `
Array [
  <div
    className="panel"
  >
    <header
      className="panel__header"
    >
      <h3>
        Schedule
      </h3>
    </header>
    <div
      className="panel__content"
    >
      <main
        className="schedules"
      >
        <section
          className="schedule"
        >
          <header>
            <h4>
              Lights
            </h4>
          </header>
          <article>
            <p>
              <strong>
                "
                day-7:0
                "
              </strong>
               
              Aug 23, 09:00
            </p>
          </article>
          <footer
            className="schedule__footer"
          >
            <button
              className="schedule__reset"
              onClick={[Function]}
            >
              RESET
            </button>
            <button
              className="schedule__set-day"
              onClick={[Function]}
            >
              SET DAY
            </button>
            <button
              className="schedule__set-night"
              onClick={[Function]}
            >
              SET NIGHT
            </button>
          </footer>
        </section>
        <section
          className="schedule"
        >
          <header>
            <h4>
              Relay
            </h4>
          </header>
          <article>
            <p>
              <strong>
                "
                day-7:0
                "
              </strong>
               
              Aug 23, 09:00
            </p>
          </article>
          <footer
            className="schedule__footer"
          >
            <button
              onClick={[Function]}
            >
              RESET
            </button>
            <button
              onClick={[Function]}
            >
              SET ON
            </button>
            <button
              onClick={[Function]}
            >
              SET OFF
            </button>
          </footer>
        </section>
      </main>
    </div>
  </div>,
]
`;

exports[`Schedule Component should render in override mode 1`] = `
Array [
  <div
    className="panel"
  >
    <header
      className="panel__header"
    >
      <h3>
        Schedule
      </h3>
    </header>
    <div
      className="panel__content"
    >
      <main
        className="schedules"
      >
        <section
          className="schedule"
        >
          <header>
            <h4>
              Lights
            </h4>
          </header>
          <article>
            <p>
              In override mode
            </p>
          </article>
          <footer
            className="schedule__footer"
          >
            <button
              className="schedule__reset"
              onClick={[Function]}
            >
              RESET
            </button>
            <button
              className="schedule__set-day"
              onClick={[Function]}
            >
              SET DAY
            </button>
            <button
              className="schedule__set-night"
              onClick={[Function]}
            >
              SET NIGHT
            </button>
          </footer>
        </section>
        <section
          className="schedule"
        >
          <header>
            <h4>
              Relay
            </h4>
          </header>
          <article>
            <p>
              In override mode
            </p>
          </article>
          <footer
            className="schedule__footer"
          >
            <button
              onClick={[Function]}
            >
              RESET
            </button>
            <button
              onClick={[Function]}
            >
              SET ON
            </button>
            <button
              onClick={[Function]}
            >
              SET OFF
            </button>
          </footer>
        </section>
      </main>
    </div>
  </div>,
]
`;
